--- a/index.html
+++ b/index.html
@@ -18,12 +18,20 @@
             </div>
         </div>
         <div class="lower-container">
-            <div class="entrance-container">
+            <div class="lower-left-container">
+                <div class="char-select">
+                    <div class="char-window"></div>
+                </div>
                 <div class="entrance">
                     
                 </div>
             </div>
             <div class="lower-right-container">
+                <div class="mover-control-container">
+                    <button class="mover-control left"><img src="./images/directions/img5.png"></button>
+                    <button class="mover-control straight"><img src="./images/directions/img2.png"></button>
+                    <button class="mover-control right"><img src="./images/directions/img4.png"></button>
+                </div>
                 <div class="game-mode-button-container">
                     <button class="mode practice toggleon">PRACTICE</button>
                     <button class="mode treasure">TREASURE</button>
